unpackaged/main/default/objects/Account/fields/LocalLanguage_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Billing_Country__c</fullName>
    <description>Denotes billing country  in local language</description>
    <inlineHelpText>Denotes billing country in local language</inlineHelpText>
    <label>Billing Country (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>