unpackaged/main/default/objects/Account/fields/LocalLanguage_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Billing_State_Province__c</fullName>
    <description>Denotes billing state/province in local language</description>
    <inlineHelpText>Denotes billing state/province in local language</inlineHelpText>
    <label>Billing State/Province (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>