unpackaged/main/default/objects/Account/fields/LocalLanguage_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Billing_Street__c</fullName>
    <description>Denotes billing street in local language</description>
    <inlineHelpText>Denotes billing street in local language</inlineHelpText>
    <label>Billing Street (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>