unpackaged/main/default/objects/Account/fields/LocalLanguage_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Billing_Zip_Postal_Code__c</fullName>
    <description>Denotes billing-zip/postal Code in local language</description>
    <inlineHelpText>Denotes billing-zip/postal Code in local language</inlineHelpText>
    <label>Billing-Zip/Postal Code (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>