unpackaged/main/default/objects/Account/fields/LocalLanguage_First_Name__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_First_Name__c</fullName>
    <description>Denotes first name in local language of an account</description>
    <inlineHelpText>Denotes last name in local language of an account</inlineHelpText>
    <label>First Name (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>