unpackaged/main/default/objects/Account/fields/LocalLanguage_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Last_Name__c</fullName>
    <description>Denotes Last Name in local language</description>
    <inlineHelpText>Denotes Last Name in local language</inlineHelpText>
    <label>Last Name (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>