unpackaged/main/default/objects/Account/fields/LocalLanguage_Title__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Title__c</fullName>
    <description>Denotes title of an agent in local language</description>
    <inlineHelpText>Denotes title of an agent in local language</inlineHelpText>
    <label>Title (Local Language)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>