unpackaged/main/default/objects/Account/fields/Loyalty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Start_Date__c</fullName>
    <description>Denotes the loyalty start date of an agent</description>
    <inlineHelpText>Denotes the loyalty start date of an agent</inlineHelpText>
    <label>Loyalty Start Date</label>
    <type>Date</type>
</CustomField>