unpackaged/main/default/objects/Account/fields/Mobile_Country__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country__c</fullName>
    <description>Denotes country code of mobile number of agents</description>
    <inlineHelpText>Denotes country code of mobile number of agents</inlineHelpText>
    <label>Mobile Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>