unpackaged/main/default/objects/Account/fields/Next_Subscription_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Subscription_Activation_Date__c</fullName>
    <description>Denotes the next subscription activation date after a successful purchase of a Agent subscription</description>
    <inlineHelpText>Denotes the next subscription activation date after a successful purchase of a Agent subscription</inlineHelpText>
    <label>Next Subscription Activation Date</label>
    <type>Date</type>
</CustomField>