unpackaged/main/default/objects/Account/fields/No_Active_Projects__c.field-meta.xml
<CustomField>
    <fullName>No_Active_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether any business account has any active projects running</description>
    <inlineHelpText>Denotes whether any business account has any active projects running</inlineHelpText>
    <label>No Active Projects</label>
    <type>Checkbox</type>
</CustomField>