unpackaged/main/default/objects/Account/fields/of_active_listings__c.field-meta.xml
<CustomField>
    <fullName>of_active_listings__c</fullName>
    <description>Number of active listings that the agent has on the PG website</description>
    <inlineHelpText>Denotes number of active listings that the agent has on the PG website</inlineHelpText>
    <label># of active listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>