unpackaged/main/default/objects/Account/fields/Opportunity_Creation_Error__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Creation_Error__c</fullName>
    <label>Opportunity Creation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>