unpackaged/main/default/objects/Account/fields/Outbound_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Sync_Error__c</fullName>
    <description>Denotes the most recent error response from Netsuite when syncing B2B accounts</description>
    <inlineHelpText>Denotes the most recent error response from Netsuite when syncing B2B accounts</inlineHelpText>
    <label>Outbound Sync Error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>