unpackaged/main/default/objects/Account/fields/Overlap_Agent__c.field-meta.xml
<CustomField>
    <fullName>Overlap_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlap Agent</label>
    <type>Checkbox</type>
</CustomField>