unpackaged/main/default/objects/Account/fields/PG_Tenure__c.field-meta.xml
<CustomField>
    <fullName>PG_Tenure__c</fullName>
    <description>Denotes tenure of an agent with PG</description>
    <formula>IF(OR(ISPICKVAL(Country__c, &#39;Malaysia&#39;),ISPICKVAL(Country__c, &#39;Thailand&#39;)),
FLOOR(
(((Year(Subscription_End_Date__c)-Year(Loyalty_Start_Date__c))*12 + (IF(IF(MONTH(Subscription_End_Date__c)+1&gt;12,MONTH(Subscription_End_Date__c)+1-12,
MONTH(Subscription_End_Date__c)+1)=MONTH(Loyalty_Start_Date__c),MONTH(Subscription_End_Date__c)+1-MONTH(Loyalty_Start_Date__c),
MONTH(Subscription_End_Date__c)-MONTH(Loyalty_Start_Date__c))))/12)),
IF(ISPICKVAL(Country__c, &#39;Singapore&#39;),
FLOOR((((Year(Subscription_End_Date__c)-Year(Loyalty_Start_Date__c))*12 + (IF(IF(MONTH(Subscription_End_Date__c)+1&gt;12,MONTH(Subscription_End_Date__c)+1-12,
MONTH(Subscription_End_Date__c)+1)=MONTH(Loyalty_Start_Date__c),MONTH(Subscription_End_Date__c)+1-MONTH(Loyalty_Start_Date__c),
MONTH(Subscription_End_Date__c)-MONTH(Loyalty_Start_Date__c))))/12)),1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PG Tenure is calculated as Subscription End Date minus Loyalty Start Date</inlineHelpText>
    <label>PG Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>