unpackaged/main/default/objects/Account/fields/PG_Tenure_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>PG_Tenure_Upgrade__c</fullName>
    <description>Denotes PG Tenure used for calculating package price for an upgrades</description>
    <formula>If( ISNULL(Loyalty_Start_Date__c), 0, FLOOR(((YEAR(TODAY() + 1 ) - YEAR(Loyalty_Start_Date__c))*12 + MONTH(Today()+1) -  MONTH(Loyalty_Start_Date__c))/12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PG Tenure Upgrade is calculated as Today&#39;s Date () minus Loyalty Start Date</inlineHelpText>
    <label>PG Tenure Upgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>