unpackaged/main/default/objects/Account/fields/PGF_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>PGF_Reward_Points__c</fullName>
    <label>PGF Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>