unpackaged/main/default/objects/Account/fields/Pioneer__c.field-meta.xml
<CustomField>
    <fullName>Pioneer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify pioneer accounts in Malaysia</description>
    <inlineHelpText>If checked, this account is a Pioneer account with special entitlements</inlineHelpText>
    <label>Pioneer</label>
    <type>Checkbox</type>
</CustomField>