unpackaged/main/default/objects/Account/fields/PO_Number_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this account require PO numbers on their orders?</description>
    <label>PO Number Required?</label>
    <type>Checkbox</type>
</CustomField>