unpackaged/main/default/objects/Account/fields/Previous_Account_Rule__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account_Rule__c</fullName>
    <description>Denotes the account rule code of agents which corresponds to the previous subscription</description>
    <inlineHelpText>Denotes the account rule code of agents which corresponds to the previous subscription</inlineHelpText>
    <label>Previous Account Rule Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>