unpackaged/main/default/objects/Account/fields/Previous_Acct_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Acct_End_Date__c</fullName>
    <description>Denotes the end date of an agent’s previous subscription</description>
    <inlineHelpText>Denotes the end date of an agent’s previous subscription</inlineHelpText>
    <label>Previous Acct End Date</label>
    <type>Date</type>
</CustomField>