unpackaged/main/default/objects/Account/fields/Previous_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reward_Points__c</fullName>
    <description>Used on the email template of reward approval</description>
    <label>Previous Reward Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>