unpackaged/main/default/objects/Account/fields/Previous_Reward_Tier__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reward_Tier__c</fullName>
    <description>Used on the email template of reward approval</description>
    <label>Previous Reward Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>