unpackaged/main/default/objects/Account/fields/Pro_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rate_Amount__c</fullName>
    <description>Denotes the amount that will be used to pro-rate an agent’s future upgrades</description>
    <inlineHelpText>Denotes the amount that will be used to pro-rate an agent’s future upgrades</inlineHelpText>
    <label>Pro Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>