unpackaged/main/default/objects/Account/fields/PT_AR_Override__c.field-meta.xml
<CustomField>
    <fullName>PT_AR_Override__c</fullName>
    <inlineHelpText>Number of Payment term days. Can be set by AR department.</inlineHelpText>
    <label>Payment terms AR override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>