unpackaged/main/default/objects/Account/fields/Record_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Record_Eligibility__c</fullName>
    <label>Record Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>