unpackaged/main/default/objects/Account/fields/Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Text__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <description>The field is created to use Record Type name in Configuration where standard Record type can not be used</description>
    <inlineHelpText>Custom Record Type Text field to support matching rule</inlineHelpText>
    <label>Record Type Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>