unpackaged/main/default/objects/Account/fields/Reference_Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Agency_Id__c</fullName>
    <description>Denotes the numeric id of agency of an agent in PG system</description>
    <inlineHelpText>Denotes the numeric id of agency of an agent in PG system</inlineHelpText>
    <label>Agency Id in AgentNet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>