unpackaged/main/default/objects/Account/fields/Referrer_Agent__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the referrer(existing agent) of an agent</description>
    <inlineHelpText>Denotes the referrer(existing agent) of an agent</inlineHelpText>
    <label>Referrer Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Referrer Agent)</relationshipLabel>
    <relationshipName>Referrer_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>