unpackaged/main/default/objects/Account/fields/Renewal_Opportunity_User__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>