unpackaged/main/default/objects/Account/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>