unpackaged/main/default/objects/Account/fields/Reward_Tier__c.field-meta.xml
<CustomField>
    <fullName>Reward_Tier__c</fullName>
    <label>Reward Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solitaire</fullName>
            </value>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
                <isActive>false</isActive>
                <label>Black</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>