unpackaged/main/default/objects/Account/fields/Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to denote highly valuable B2B accounts</description>
    <inlineHelpText>Flag to denote highly valuable B2B accounts</inlineHelpText>
    <label>Strategic Account?</label>
    <type>Checkbox</type>
</CustomField>