unpackaged/main/default/objects/Account/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description>Denotes end date of an agent&#39;s current subscriptions</description>
    <inlineHelpText>Denotes end date of an agent&#39;s current subscriptions</inlineHelpText>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>