unpackaged/main/default/objects/Account/fields/Subscription_Month_Left__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Month_Left__c</fullName>
    <description>Denotes how many months are left in an agent’s current subscription</description>
    <formula>floor(( Subscription_End_Date__c  - DATEVALUE(now()) )/30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes how many months are left in an agent’s current subscription</inlineHelpText>
    <label>Subscription Month Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>