unpackaged/main/default/objects/Account/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description>Denotes the start date of agent&#39;s current subscription</description>
    <inlineHelpText>Denotes the start date of agent&#39;s current subscription</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>