unpackaged/main/default/objects/Account/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the PG subsidiary to which the account belongs to</description>
    <inlineHelpText>Denotes the PG subsidiary to which the account belongs to</inlineHelpText>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>