unpackaged/main/default/objects/Account/fields/Subsidiary_Type__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Type__c</fullName>
    <defaultValue>if(ISPICKVAL($User.Subsidiary__c,&#39;MyProperty Data Sdn. Bhd.&#39;),&#39;MPD&#39;,&#39;&#39;)</defaultValue>
    <label>Subsidiary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>