unpackaged/main/default/objects/Account/fields/Suspended_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Date_Time__c</fullName>
    <label>Suspended Date Time</label>
    <type>DateTime</type>
</CustomField>