unpackaged/main/default/objects/Account/fields/Sync_to_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to NetSuite</label>
    <type>Checkbox</type>
</CustomField>