unpackaged/main/default/objects/Account/fields/Tax_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reg_Number__c</fullName>
    <description>Denotes tax registration number of an account</description>
    <inlineHelpText>Denotes tax registration number of an account</inlineHelpText>
    <label>GST REG. / VAT REG. / NPWP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>