unpackaged/main/default/objects/Account/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>temp</label>
    <type>Checkbox</type>
</CustomField>