unpackaged/main/default/objects/Account/fields/temporaryDelete__c.field-meta.xml
<CustomField>
    <fullName>temporaryDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>temporaryDelete</label>
    <type>Checkbox</type>
</CustomField>