unpackaged/main/default/objects/Account/fields/Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents accounts created for testing purpose</description>
    <inlineHelpText>Represents accounts created for testing</inlineHelpText>
    <label>Test Account</label>
    <type>Checkbox</type>
</CustomField>