unpackaged/main/default/objects/Account/fields/Total_Spending_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Spending_12_Months__c</fullName>
    <inlineHelpText>This is total spending on Discretionary Products</inlineHelpText>
    <label>Total Spending (last 12 months)</label>
    <summarizedField>Opportunity.Total_Spending_on_Discretionary_Product__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Months_Included__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>