unpackaged/main/default/objects/Account/fields/Total_Spending_Amount_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Total_Spending_Amount_last_12_months__c</fullName>
    <description>This is total spending on Discretionary Products</description>
    <inlineHelpText>This is total spending on Discretionary Products</inlineHelpText>
    <label>Total Spending Amount (last 12 months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>