unpackaged/main/default/objects/Account/fields/Unbilled_Orders__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Orders__c</fullName>
    <label>Unbilled Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>