unpackaged/main/default/objects/Account/fields/Updated_from_API__c.field-meta.xml
<CustomField>
    <fullName>Updated_from_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated from API</label>
    <type>Checkbox</type>
</CustomField>