unpackaged/main/default/objects/Account/fields/Upload_Tag__c.field-meta.xml
<CustomField>
    <fullName>Upload_Tag__c</fullName>
    <description>Populated while uploading Accounts through data loader</description>
    <inlineHelpText>Populated while uploading Accounts through data loader</inlineHelpText>
    <label>Upload Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>