unpackaged/main/default/objects/Account/fields/UUId__c.field-meta.xml
<CustomField>
    <fullName>UUId__c</fullName>
    <description>To store the customer referential data from UMS (User Management System)</description>
    <label>UUId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>