unpackaged/main/default/objects/Account/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to denote if agent is VIP</description>
    <inlineHelpText>Flag to denote if agent is VIP</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>