unpackaged/main/default/objects/Account/fields/VIP_Campaign__c.field-meta.xml
<CustomField>
    <fullName>VIP_Campaign__c</fullName>
    <description>Denotes the VIP campaign to which the agent is approved to be a campaign member</description>
    <inlineHelpText>Denotes the VIP campaign to which the agent is approved to be a campaign member</inlineHelpText>
    <label>VIP Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>