unpackaged/main/default/objects/Account/fields/VIP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>VIP_End_Date__c</fullName>
    <description>Denotes the end date of VIP agent&#39;s current subscription</description>
    <inlineHelpText>Denotes the end date of VIP agent&#39;s current subscription</inlineHelpText>
    <label>VIP End Date</label>
    <type>Date</type>
</CustomField>