unpackaged/main/default/objects/Account/fields/VIP_Package__c.field-meta.xml
<CustomField>
    <fullName>VIP_Package__c</fullName>
    <formula>if(VIP__c == true &amp;&amp;  isnull(Current_Subscription__c)==false, Current_Subscription__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Package</label>
    <type>Text</type>
</CustomField>