unpackaged/main/default/objects/Account/fields/VIP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>VIP_Start_Date__c</fullName>
    <description>Denotes the start date of VIP agent&#39;s current subscription</description>
    <inlineHelpText>Denotes the start date of VIP agent&#39;s current subscription</inlineHelpText>
    <label>VIP Start Date</label>
    <type>Date</type>
</CustomField>