unpackaged/main/default/objects/Account/fields/Web_Metric__c.field-meta.xml
<CustomField>
    <fullName>Web_Metric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Metric</label>
    <referenceTo>Web_Metric__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>