unpackaged/main/default/objects/Account/fields/X2FA__c.field-meta.xml
<CustomField>
    <fullName>X2FA__c</fullName>
    <description>Field representing 2FA status of agent</description>
    <label>2FA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>