unpackaged/main/default/objects/Account/recordTypes/AD_Sales_Commercial.recordType-meta.xml
<RecordType>
    <fullName>AD_Sales_Commercial</fullName>
    <active>true</active>
    <label>AD Sales - Commercial</label>
</RecordType>