unpackaged/main/default/objects/Account/recordTypes/Agency.recordType-meta.xml
<RecordType>
    <fullName>Agency</fullName>
    <active>true</active>
    <label>Agency</label>
</RecordType>