unpackaged/main/default/objects/Account/recordTypes/B2B_Account.recordType-meta.xml
<RecordType>
    <fullName>B2B_Account</fullName>
    <active>true</active>
    <label>B2B - Account</label>
</RecordType>