unpackaged/main/default/objects/Account/recordTypes/Sub_division.recordType-meta.xml
<RecordType>
    <fullName>Sub_division</fullName>
    <active>true</active>
    <label>Sub-division</label>
</RecordType>