unpackaged/main/default/objects/Account/validationRules/Agency_and_Agents_Country_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_and_Agents_Country_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName  = &#39;Agent&#39;,
!ISBLANK(Agency__c),
TEXT( Country__c ) &lt;&gt; TEXT(Agency__r.Country__c)
)</errorConditionFormula>
    <errorMessage>Agent&#39;s country should be the same as the country of the Agency.</errorMessage>
</ValidationRule>