unpackaged/main/default/objects/Account/validationRules/Agency_number_is_mandatory_for_SG.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_number_is_mandatory_for_SG</fullName>
    <active>true</active>
    <errorConditionFormula>and (ISBLANK(CEA_License__c),
					ISPICKVAL(Country__c , &#39;Singapore&#39;),
					RecordType.DeveloperName = &#39;Agency&#39;)</errorConditionFormula>
    <errorMessage>Agency Identification Number is mandatory</errorMessage>
</ValidationRule>