unpackaged/main/default/objects/Account/validationRules/Agency_record_not_synced.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_record_not_synced</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Agency__c)),ISBLANK(Agency__r.Agency_Id__c),IsPersonAccount  )</errorConditionFormula>
    <errorMessage>Agency is not synced to PG system. Choose a valid agency</errorMessage>
</ValidationRule>