unpackaged/main/default/objects/Account/validationRules/B2C_sales_Head_field_is_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>B2C_sales_Head_field_is_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsPersonAccount,OR( $Profile.Name = &#39;B2C Sales Head&#39;, $Profile.Name = &#39;MY B2C Sales Head&#39;),OR( ISCHANGED( PersonBirthdate ),ISCHANGED(Fax ) ) )</errorConditionFormula>
    <errorMessage>You do not have Access to update these fields.</errorMessage>
</ValidationRule>