unpackaged/main/default/objects/Account/validationRules/Billing_country_must_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_country_must_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(BillingAddress)),ISBLANK(BillingCountry),RecordType.DeveloperName = &#39;B2B_Account&#39;)</errorConditionFormula>
    <errorMessage>Billing country is mandatory</errorMessage>
</ValidationRule>