unpackaged/main/default/objects/Account/validationRules/branch_and_gst_field_length.validationRule-meta.xml
<ValidationRule>
    <fullName>branch_and_gst_field_length</fullName>
    <active>true</active>
    <description>To validate the length of branch id and GST reg field</description>
    <errorConditionFormula>AND(RecordType.Name=&#39;B2B - Account&#39;,
OR(Subsidiary__r.Name=&#39;AllProperty Media Co., Ltd. (Head Office)&#39;,
Subsidiary__r.Name=&#39;PropertyGuru International (Thailand) Co Ltd&#39;),
OR(LEN( Branch_ID__c ) != 5,
LEN( Tax_Reg_Number__c )!=13))</errorConditionFormula>
    <errorMessage>You must enter the GST REG./VAT REG. / NPWP with 13 digit number and Branch ID with 5 digits</errorMessage>
</ValidationRule>